已按既定设计完成修复，未引入任何业务硬编码。 新的链路是： 子工具 → 父工具桥接 → 查询关系表 → 校验模板存在性与授权 → 返回模板及参数 Schema → Runtime 直接执行固定模板集 关键改动： - 父工具不再执行二次搜索、召回或排序，直接读取 mcp_template_query_binding 中维护的模板集合。 - 校验子工具与父工具路由关系，父工具不匹配时明确拒绝。 - 只返回当前存在、启用且授权的模板，并附带最新 parameterSchema。 - 返回协议增加：   - selectionMode=FIXED_BINDING   - searchPerformed=false   - bindingComplete   - 不可用或未授权模板数量 - Runtime 根据协议字段识别固定绑定，跳过 LLM 二次筛选，直接采纳全部绑定模板。 - 如果绑定中的任何模板不存在或未授权，Runtime 明确以 TEMPLATE_BINDING_INCOMPLETE 失败，不再静默形成“部分证据”。 - filters、limit 等旧参数只保留协议兼容性，不再影响固定模板范围。 主要实现： - [TemplateQueryMcpToolPublisher.java (line 115)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/templatepublication/publisher/TemplateQueryMcpToolPublisher.java:115) - [TemplateQueryBindingService.java (line 164)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/templatepublication/binding/TemplateQueryBindingService.java:164) - [TemplateAssetCatalogService.java (line 179)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/templatepublication/catalog/TemplateAssetCatalogService.java:179) - [InterpretationPlanRuntime.java (line 2829)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/runtime/plan/InterpretationPlanRuntime.java:2829) 验证结果： - MCP 发布、绑定、资产目录、父工具测试：34 个全部通过。 - InterpretationPlanRuntimeTest：146 个全部通过。 - Maven Reactor：BUILD SUCCESS。 - git diff --check 通过。 需要同时重启 chatchat-mcp-server 和承载 Agents Runtime 的 API 服务，使新发布协议和 Runtime 固定绑定处理逻辑一起生效。